package keeper

import (
	"context"

	anteilv1 "github.com/volnix-protocol/volnix-protocol/proto/gen/go/volnix/anteil/v1"
)

type MsgServer struct {
	anteilv1.UnimplementedMsgServer
	k *Keeper
}

func NewMsgServer(k *Keeper) MsgServer {
	return MsgServer{k: k}
}

var _ anteilv1.MsgServer = (*MsgServer)(nil)

func (s MsgServer) PlaceOrder(ctx context.Context, req *anteilv1.MsgPlaceOrder) (*anteilv1.MsgPlaceOrderResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgPlaceOrderResponse{
		Success: true,
		OrderId: "order-123",
		Status:  "placed",
	}, nil
}

func (s MsgServer) CancelOrder(ctx context.Context, req *anteilv1.MsgCancelOrder) (*anteilv1.MsgCancelOrderResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgCancelOrderResponse{
		Success: true,
		Status:  "cancelled",
	}, nil
}

func (s MsgServer) UpdateOrder(ctx context.Context, req *anteilv1.MsgUpdateOrder) (*anteilv1.MsgUpdateOrderResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgUpdateOrderResponse{
		Success: true,
		Status:  "updated",
	}, nil
}

func (s MsgServer) PlaceBid(ctx context.Context, req *anteilv1.MsgPlaceBid) (*anteilv1.MsgPlaceBidResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgPlaceBidResponse{
		Success: true,
		BidId:   "bid-123",
		Status:  "placed",
	}, nil
}

func (s MsgServer) SettleAuction(ctx context.Context, req *anteilv1.MsgSettleAuction) (*anteilv1.MsgSettleAuctionResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgSettleAuctionResponse{
		Success: true,
		Status:  "settled",
	}, nil
}

func (s MsgServer) RegisterMarketMaker(ctx context.Context, req *anteilv1.MsgRegisterMarketMaker) (*anteilv1.MsgRegisterMarketMakerResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgRegisterMarketMakerResponse{
		Success:       true,
		MarketMakerId: "mm-123",
	}, nil
}

func (s MsgServer) ProvideLiquidity(ctx context.Context, req *anteilv1.MsgProvideLiquidity) (*anteilv1.MsgProvideLiquidityResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgProvideLiquidityResponse{
		Success:        true,
		SharesReceived: "1000",
		PoolId:         req.PoolId,
	}, nil
}

func (s MsgServer) WithdrawLiquidity(ctx context.Context, req *anteilv1.MsgWithdrawLiquidity) (*anteilv1.MsgWithdrawLiquidityResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgWithdrawLiquidityResponse{
		Success:           true,
		AntAmountReceived: "1000",
		PoolId:            req.PoolId,
	}, nil
}

func (s MsgServer) StakeANT(ctx context.Context, req *anteilv1.MsgStakeANT) (*anteilv1.MsgStakeANTResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgStakeANTResponse{
		Success:      true,
		StakedAmount: req.AntAmount,
		RewardRate:   "5.0",
	}, nil
}

func (s MsgServer) UnstakeANT(ctx context.Context, req *anteilv1.MsgUnstakeANT) (*anteilv1.MsgUnstakeANTResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgUnstakeANTResponse{
		Success:        true,
		UnstakedAmount: req.AntAmount,
		RewardsClaimed: "50",
	}, nil
}

func (s MsgServer) ClaimRewards(ctx context.Context, req *anteilv1.MsgClaimRewards) (*anteilv1.MsgClaimRewardsResponse, error) {
	// Simple stub implementation
	return &anteilv1.MsgClaimRewardsResponse{
		Success:            true,
		RewardAmount:       "100",
		TotalRewardsEarned: "1000",
	}, nil
}
